# Edit-Distance

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  block_hashing.h  dac_mm.cpp  dac_mm.h  dac_mm_k.h  dc3.h  edit_distance_block_hashing.h  edit_distance_dp.cpp  edit_distance_dp.h  edit_distance_hashing.h  edit_distance_parallel.cpp  edit_distance_parallel.h  edit_distance_rolling_blk.h  edit_distance_rolling_hashing.h  edit_distance_sequential.cpp  edit_distance_sequential.h  edit_distance_test.cpp  everything_bagel.sh.backup  get_time.hpp  hash_block_parallel.h  hash_lcp_parallel.h  lcp_parallel.h  longest_common_prefix.h  minimum_edit_distance.h  range_min.h  rolling_hashing.h  rolling_hashing_blk.h  sparse_table_sequential.h  suffix_array_parallel.cpp  suffix_array_parallel.h  suffix_array_sequential.cpp  suffix_array_sequential.h  suffix_array_test.cpp  test_framework  test_framework.cpp  test_framework_ratio.cpp  (+2 more)
new_build/: 424.ratio.2.txt  424.ratio.txt  CMakeCache.txt  Makefile  cmake_install.cmake  output.csv  output2.csv  output_edit.csv
new_build/parlaylib/: Makefile  ParlayConfig.cmake  ParlayConfigVersion.cmake  cmake_install.cmake
new_build/parlaylib/analysis/: Makefile  cmake_install.cmake
sparse_table_edit_distance/: ST_lcp_sequential.h
